<resources>
    <string name="app_name">SpbtEx</string>
    <string name="title_activity_login">ログイン画面</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_code">Code</string>
    <string name="prompt_password">Password</string>
    <string name="reType_password">Password再入力</string>
    <string name="prompt0_password">現在のPassword</string>
    <string name="prompt1_password">新しいPassword</string>
    <string name="prompt1_password_re">新しいPassword再入力</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"メールアドレス または パスワード が間違っています"</string>
    <string name="login_failed_username">"メールアドレス不一致"</string>
    <string name="login_failed_password">"パスワード不一致"</string>
    <string name="login_failed_regist">"仮登録中メールアドレス"</string>
    <string name="prompt_name">Name</string>
    <string name="action_register">会員登録</string>
    <string name="password_memo">※ パスワードは英数字混在で8～24文字以内で入力して下さい</string>
    <string name="email_memo">入力メールアドレスに認証用コードを送信します</string>
    <string name="code_memo">メールアドレスに記載されているコードを入力してください。\n
        stand-aloneの場合はコード「0000」</string>
    <string name="title_activity_mail_address">メールアドレス認証画面</string>
    <string name="title_activity_mail_code">コード認証画面</string>
    <string name="title_activity_regist">会員登録画面</string>
    <string name="title_activity_facility">施設選択画面</string>
    <string name="title_activity_reservation">予約画面</string>
    <string name="title_activity_home">ホーム画面</string>
    <string name="title_activity_reservation_remain">予約一覧画面</string>
    <string name="title_activity_reservation_past">過去予約一覧画面</string>
    <string name="title_activity_reservation_detail">予約詳細画面</string>
    <string name="title_activity_member">会員情報画面</string>
    <string name="title_activity_update_mail">メールアドレス変更画面</string>
    <string name="title_activity_update_mail_code">メールアドレス変更用\n
        コード認証画面</string>
    <string name="title_activity_update_pass">パスワード変更画面</string>
    <string name="title_activity_update_etc">会員情報変更画面</string>
    <string name="action_m_email">メールアドレス変更</string>
    <string name="action_m_pass">パスワード変更</string>
    <string name="action_m_etc">その他会員情報変更</string>
    <string name="action_update">更新する</string>
    <string name="action_delete">退会する</string>
    <string name="fc_amount">(部屋数・台数) </string>
    <string name="logout">ログアウト</string>
    <string name="login">ログイン</string>
    <string name="login_username_title">ユーザー名</string>
    <string name="login_guest_name">未ログイン</string>
    <string name="display_password">パスワードを表示する</string>
    <string name="alert_password">※ パスワードを表示する場合、後ろから覗き見されないように注意してください</string>
    <string name="dialog_message">本当に退会してもよろしいですか</string>
    <string name="dialog_positive">はい</string>
    <string name="dialog_negative">キャンセル</string>
    <string name="logout_message_delete_member">退会完了</string>
    <string name="logout_message_push_bar">ログアウトしました</string>
    <string name="logout_message_session_error1">サーバーに接続できませんでした。再ログインしてください</string>
    <string name="logout_message_session_error2">エラーです。再ログインしてください</string>
    <string name="logout_message_session_error3">セッションが無効です。再ログインしてください</string>
    <string name="title_activity_mail_post">MailPostActivity</string>

    <string name="reservation_facility_label">予約施設</string>
    <string name="reservation_date_label">予約日</string>
    <string name="reservation_time_label">予約時間</string>
    <string name="reservation_date_button">日付を選択</string>
    <string name="reservation_confirm_button">予約する</string>
    <string name="reservation_dialog_message">この内容で予約しますか？</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">予約中</string>
    <string name="tab_text_2">過去の予約履歴</string>
    <string name="tab_list_text_1">#</string>
    <string name="tab_list_text_2">予約日時</string>
    <string name="tab_list_text_3">施設</string>
</resources>