<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SpbtEx.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="45sp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/list_top_linerLayout">

            <TextView
                android:id="@+id/number_top"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textAppearance="@string/tab_list_text_1"/>

            <TextView
                android:id="@+id/content_top"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8sp"
                android:layout_weight="10"
                android:gravity="center"
                android:textSize="16sp"
                android:textAppearance="@string/tab_list_text_2"/>

            <TextView
                android:id="@+id/content2_top"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8sp"
                android:layout_weight="10"
                android:gravity="center"
                android:textSize="16sp"
                android:textAppearance="@string/tab_list_text_3"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />
        -->
</androidx.coordinatorlayout.widget.CoordinatorLayout>